rust/src/nasl/builtin/report/snapshots/scannerlib__nasl__builtin__report__tests__result_error_message_1.snap
---
source: src/nasl/builtin/report/tests.rs
expression: result
---
Result(
  id: 1,
  type: error,
  ip_address: Some("127.0.0.1"),
  hostname: Some(""),
  oid: Some(""),
  port: Some(12),
  protocol: Some(tcp),
  message: Some("test1"),
)
