rust/src/nasl/builtin/report/snapshots/scannerlib__nasl__builtin__report__tests__result_log_message_2.snap
---
source: src/nasl/builtin/report/tests.rs
expression: result
---
Result(
  id: 2,
  type: log,
  ip_address: Some("127.0.0.1"),
  hostname: Some(""),
  oid: Some(""),
  port: Some(12),
  protocol: Some(tcp),
  message: Some("test2"),
)
