rust/src/nasl/builtin/report/snapshots/scannerlib__nasl__builtin__report__tests__result_log_message_3.snap
---
source: src/nasl/builtin/report/tests.rs
expression: result
---
Result(
  id: 3,
  type: log,
  ip_address: Some("127.0.0.1"),
  hostname: Some(""),
  oid: Some(""),
  protocol: Some(tcp),
  message: Some("test3"),
)
